[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/BigText.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=2]
[ext_resource path="res://ActiveExercise.gd" type="Script" id=3]

[node name="ActiveExercise" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VerticalBox_Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label_ExerciseName" type="Label" parent="VerticalBox_Main"]
margin_right = 720.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
text = "Exercise"
align = 1

[node name="Label_Money" type="Label" parent="VerticalBox_Main"]
margin_top = 80.0
margin_right = 720.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "$0.00"
align = 1

[node name="VerticalBox_Bottom" type="VBoxContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="HorizonatlBox_Info" type="HBoxContainer" parent="VerticalBox_Bottom"]
margin_right = 720.0
margin_bottom = 38.0

[node name="Label_RepTime" type="Label" parent="VerticalBox_Bottom/HorizonatlBox_Info"]
margin_right = 358.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "0.0s"
align = 1

[node name="Label_MoneyEarned" type="Label" parent="VerticalBox_Bottom/HorizonatlBox_Info"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "$0.00"
align = 1

[node name="ProgressBar_Rep" type="ProgressBar" parent="VerticalBox_Bottom"]
margin_top = 42.0
margin_right = 720.0
margin_bottom = 80.0
size_flags_vertical = 3
max_value = 1.0
step = 0.001
percent_visible = false

[node name="HorizontalBox_Buttons" type="HBoxContainer" parent="VerticalBox_Bottom"]
margin_top = 84.0
margin_right = 720.0
margin_bottom = 128.0
size_flags_vertical = 3

[node name="Button_Start" type="Button" parent="VerticalBox_Bottom/HorizontalBox_Buttons"]
margin_right = 358.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="Button_End" type="Button" parent="VerticalBox_Bottom/HorizontalBox_Buttons"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Stop"

[node name="Button_Exit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "x"

[node name="RepTimer" type="Timer" parent="."]

[connection signal="pressed" from="VerticalBox_Bottom/HorizontalBox_Buttons/Button_Start" to="." method="_on_Button_Start_pressed"]
[connection signal="pressed" from="VerticalBox_Bottom/HorizontalBox_Buttons/Button_End" to="." method="_on_Button_End_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
[connection signal="timeout" from="RepTimer" to="." method="_on_RepTimer_timeout"]
